Enhancement 2506: Add new profiling API  - Add profiling rest APIs.  - Add post processing scripts for node profiling data.  - Invoke post processing after profiling is complete.  - Add tests and test data.
